# Titan-Game-Engine

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md
Engine/: CMakeLists.txt
Engine/src/: Engine.cpp  Titan.h
Engine/src/Core/: Application.cpp  Application.h  Core.h  Entrypoint.h  EventBus.h  Logger.cpp  Logger.h
Game/: CMakeLists.txt
Game/src/: Game.cpp
